--- a/employeeList/src/main/resources/application.properties
+++ b/employeeList/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=employeeList
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/employee_db
+#spring.datasource.username=root
+#spring.datasource.password=Smart@123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+server.port=8080
+
